[workspace]
resolver = "2"
members = [
   "sega-cp-swap", 
   "okx"
]

[workspace.dependencies]
anchor-lang = "0.31.0"
anchor-spl = "0.31.0"
anchor-syn = "0.31.0"
anchor-gen = "0.4.1"
anyhow = "1.0.66"
tokio = "1.28.0"
solana-sdk = "~2.1"
solana-client = "~2.1"
solana-account-decoder = "~2.1"
async-trait = "0.1.88"
serde_json = "1.0.140"
log = "0.4.27"
lazy_static = "1.2.0"
rust_decimal = "1.26.1"
uint = "0.10.0"

spl-token = { version = "7.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "7.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "6.0.0", features = [
    "no-entrypoint",
] }